; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_sysfs.c_acpi_global_event_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_sysfs.c_acpi_global_event_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_EVENT_TYPE_GPE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [18 x i8] c"GPE event 0x%02x\0A\00", align 1
@ACPI_EVENT_TYPE_FIXED = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [20 x i8] c"Fixed event 0x%02x\0A\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"Other event 0x%02x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32, i64, i8*)* @acpi_global_event_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_global_event_handler(i64 %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* @ACPI_EVENT_TYPE_GPE, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %4
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @gpe_count(i64 %13)
  %15 = load i64, i64* %7, align 8
  %16 = call i32 @pr_debug(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i64 %15)
  br label %30

17:                                               ; preds = %4
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* @ACPI_EVENT_TYPE_FIXED, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %26

21:                                               ; preds = %17
  %22 = load i64, i64* %7, align 8
  %23 = call i32 @fixed_event_count(i64 %22)
  %24 = load i64, i64* %7, align 8
  %25 = call i32 @pr_debug(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i64 %24)
  br label %29

26:                                               ; preds = %17
  %27 = load i64, i64* %7, align 8
  %28 = call i32 @pr_debug(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i64 %27)
  br label %29

29:                                               ; preds = %26, %21
  br label %30

30:                                               ; preds = %29, %12
  ret void
}

declare dso_local i32 @gpe_count(i64) #1

declare dso_local i32 @pr_debug(i8*, i64) #1

declare dso_local i32 @fixed_event_count(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
